test/typecheck/y_error_10.j.gold
test/y_error_10.j:6:13: error: invalid unary operator '!' on non-Bool type 'Int'
   |
 6 |     a = !a;
   |         ^
